<resources>
    <string name="app_name">Nana Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Promociones">Promociones</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Pago">Pago</string>
    <string name="Menu">Menu</string>
    <string name="Back">Back</string>
    <string name="Femenino">Femenino</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="recordar">Recordar</string>
    <string name="ingresar">Ingresar</string>
    <string name="splash">splash</string>
</resources>