<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="4dp"
            android:text="@string/Menu"
            android:textColor="@color/Tiitulos"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btn_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/Back"
            android:src="@drawable/atras"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toEndOf="@+id/txtMenu"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="215dp"
            android:layout_height="178dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/perfilnana"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_atras" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/textname"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:targetApi="o" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/textpass"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:hint="@string/pass"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:targetApi="o" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recordar" />

            <Button
                android:id="@+id/button_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>